--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,32 @@
-
+.background {
+    background: url(https://images.sidearmdev.com/convert?url=https%3a%2f%2fdxbhsrqyrr690.cloudfront.net%2fsidearm.nextgen.sites%2funionathletics.com%2fimages%2f2021%2f5%2f11%2f2019_Union_AerialPhotos_11.png&type=webp) no-repeat center;
+    background-size: cover;
+    width: 100%;
+}
+  
+.background:before {
+    background-color: rgba(0, 0, 0, 0.6);
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+  
+.background .container {
+    height: 100vh;
+    z-index: 1;
+    position: relative;
+}
+  
+.background h1 {
+    font-size: 1.5em;
+}
+  
+.background h2 {
+    font-size: 1.2em;
+}
 
 .navbar {
     background-color: antiquewhite;
@@ -36,16 +64,6 @@
     outline: none;
 }
 
-.nav-link {
-    color:cadetblue;
-    font-weight: 500;
-    position: relative;
-}
-
-.nav-link:hover, .nav-link.active {
-    color: seagreen;
-    font-weight: 700;
-}
 @media (min-width: 991px){
 
     .nav-link::before {
@@ -67,16 +85,20 @@
     }
 }
 
-.search-button {
-    background-color: cadetblue;
-    color: white;
-    font-size: 14px;
-    padding: 8px 20px;
-    border-radius: 50px;
-    text-decoration: none;
-    transition: 0.3s background-color;
-}
-
-.search-button:hover {
-    background-color: seagreen;
-}
+div {
+    display: flex;
+    margin: 4%;
+    padding: 2%;
+    box-shadow: inset 0 0 12px blue;
+ }
+ p {
+    font-family: "Courier Monospace";
+    font-size: 2em;
+    color: red;
+ }
+ p:last-of-type {
+    animation: type 0.33s infinite;
+ }
+ @keyframes type{
+    to { opacity: .0; }
+ }
