--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .background {
-    background: url() no-repeat center;
+    background-color: darkolivegreen;
     background-size: cover;
     width: 100%;
 }
@@ -86,15 +86,19 @@
 }
 
 .im {
-    padding-right: 25px;
+    padding-right: 15px;
 }
 
 .typer {
     display: flex;
     font-family: "Courier Monospace";
-    font-size: 2em;
+    font-size: 1.25em;
     color: beige;
+    overflow-wrap: normal;
+    padding-right: 10px;
+    padding-bottom: 10px;
 }
+
 #cursor:last-of-type {
     animation: type 0.33s infinite;
  }
